--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
     <header class="header"> 
         <a href="#" class="logo"><img src="img/logo.png" alt="kinorizik"></a> 
         <nav class="navber"> 
-            <ul class="menu-list"> 
-                <li class="menu-item"><a href="#"><h3>НОВИНКИ</h3></a></li> 
-                <li class="menu-item"><a href="#"><h3>ФИЛЬМЫ</h3></a></li> 
-                <li class="menu-item"><a href="#"><h3>МУЛЬТФИЛЬМЫ</h3></a></li> 
-                <li class="menu-item"><a href="#"><h3>СЕРИАЛЫ</h3></a></li> 
-            </ul>  
+              <ul class="menu-list">
+                <li class="menu-item"><a href="#">НОВИНКИ</a></li>
+                <li class="menu-item"><a href="#">ФИЛЬМЫ</a></li>
+                <li class="menu-item"><a href="#">МУЛЬТФИЛЬМЫ</a></li>
+                <li class="menu-item"><a href="#">СЕРИАЛЫ</a></li>
+              </ul>
         </nav> 
         <a href="#" class="poisk"><img src="img/поиск — копия.png" alt=""></a> 
             </header> 
-        <button class="button-new" >Новинки кино</button>
-           <nav>
+        <a class="button-new" href="#"> Новинки кино</a>
+           
             <ul class="new">
-                <li><a href="#"><img src="img/Джон уик.png" alt=""></a></li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Без ответа.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/крик 6.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Шазам.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/крид.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/65.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Джон уик.png" alt=""></a></li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Без ответа.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li  class="photo"><a href="#"><img src="img/крик 6.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Шазам.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/крид.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/65.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
             </ul>
-           </nav>
-         <button class="button-film" >Фильмы </button>
+           <br><br><br>
+         <a class="button-film"  href="#">Фильмы</a>  
          <ul class="new2">
-            <li><a href="#"><img src="img/Начало.png" alt=""></a></li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Аладин.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Железный человек.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Довод.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Аватар.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="#"><img src="img/Интестеллар.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Начало.png" alt=""></a></li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Аладин.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Железный человек.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Довод.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Аватар.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="photo"><a href="#"><img src="img/Интестеллар.png" alt=""></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          </ul>
 </body>
 </html>
